fixed logo misalignment

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -68,7 +68,7 @@ ul {
 	text-align: right;
 	height: 13px;
 	background-size: 94px;
-	background-position: 24px -77px;
+	background-position: 23px -77px;
 	margin-left: 4px;
 }
 
